# gpuKalmanFitter

./: .gitmodules  CMakeLists.txt  Definitions.hpp  EigenStepper.hpp  EigenStepper.ipp  Helpers.hpp  Propagator.hpp  Propagator.ipp  README.md  TrackParameters.hpp  build.sh  main.cu
CI/: check_format_local  pyproject.toml  requirements.txt
Performance/Legacy/: calculator_stat_cpu.sh  calculator_stat_gpu.sh  perf.C
Performance/Legacy/plotData/: perf.txt  perfNoSmearing.txt
Performance/Profiling/: draw_prof.py  draw_prof.py.bak  draw_prof_gridsize5120_shared0.py  report-v100-nTracks10k-stream1-shared0-gridsize100k-blocksize8x8.qdrep  report-v100-nTracks10k-stream1-shared0-gridsize100k-blocksize8x8.stat  report-v100-nTracks10k-stream1-shared0-gridsize100k-blocksize8x8_bounds256-2.stat  report-v100-nTracks10k-stream1-shared0-gridsize5120-blocksize8x8.qdrep  report-v100-nTracks10k-stream1-shared1-gridsize100k-blocksize8x8.qdrep  report-v100-nTracks10k-stream1-shared1-gridsize100k-blocksize8x8.stat  report-v100-nTracks10k-stream1-shared1-gridsize100k-blocksize8x8_bounds256-2.qdrep  report-v100-nTracks10k-stream1-shared1-gridsize100k-blocksize8x8_bounds256-2.stat  report-v100-nTracks10k-stream1-shared1-gridsize5120-blocksize8x8.stat  report-v100-nTracks10k-stream1-shared1-gridsize5120-blocksize8x8_bounds256-2.qdrep  report-v100-nTracks10k-stream4-shared0-gridsize100k-blocksize8x8.qdrep  report-v100-nTracks10k-stream4-shared0-gridsize100k-blocksize8x8.stat  report-v100-nTracks10k-stream4-shared0-gridsize5120-blocksize8x8.qdrep  report-v100-nTracks10k-stream4-shared0-gridsize5120-blocksize8x8.stat  report-v100-nTracks10k-stream4-shared1-gridsize100k-blocksize8x8.qdrep  report-v100-nTracks10k-stream4-shared1-gridsize100k-blocksize8x8.stat  report-v100-nTracks10k-stream4-shared1-gridsize5120-blocksize8x8.qdrep
Performance/Profiling/nsight_raw/: report-v100-nTracks10k-stream1-shared0-gridsize5120-blocksize8x8_bounds256-2.stat  report-v100-nTracks10k-stream4-shared1-gridsize5120-blocksize8x8_bounds256-2.stat
Performance/Scripts/: README  README.md  calculator_stat.sh  calculator_stat_cpu.sh  calculator_stat_gpu.sh  calculator_stat_gpu_testRegister.sh  perf.C  perigeeParamResolution.C  plot.C  plotTime.C  prof_ncu_gpu.sh  prof_nsys_gpu.sh  run_stat_cpu.sh  run_stat_gpu.sh  run_stat_multi_gpu.sh
Performance/Scripts/data/: perf.txt
Performance/Scripts/plotData/: .run.sh.swp  README  Results_timing_Haswell_CustomInverter_OMP_NumThreads_60.csv  Results_timing_Haswell_EigenInverter_OMP_NumThreads_1.csv  Results_timing_Haswell_EigenInverter_OMP_NumThreads_60.csv  Results_timing_Haswell_customInverter_OMP_NumThreads_1.csv  Results_timing_Haswell_customInverter_OMP_NumThreads_60.csv  Results_timing_Intel-5115_OMP_NumThreads_250.csv  Results_timing_Intel_i7-8559U_EigenInverter_OMP_NumThreads_1.csv  Results_timing_Intel_i7-8559U_EigenInverter_OMP_NumThreads_60.csv  Results_timing_KNL_CustomInverter_OMP_NumThreads_1.csv  Results_timing_Knl_EigenInverter_OMP_NumThreads_1.csv  Results_timing_NVCC-compiled_Intel-5115_OMP_NumThreads_250.csv  Results_timing_Tesla_P100-PCIE-16GB_nStreams_1_gridSize_100000x1x1_blockSize_8x8x1_sharedMemory_0.csv  Results_timing_Tesla_P100-PCIE-16GB_nStreams_1_gridSize_100000x1x1_blockSize_8x8x1_sharedMemory_0_extended.csv  Results_timing_Tesla_P100-PCIE-16GB_nStreams_1_gridSize_100000x1x1_blockSize_8x8x1_sharedMemory_1.csv  Results_timing_Tesla_P100-PCIE-16GB_nStreams_1_gridSize_100000x1x1_blockSize_8x8x1_sharedMemory_1_extended.csv  (+59 more)
Run/: CMakeLists.txt
Run/CPU/: CMakeLists.txt  KalmanFitterCPUTest.cpp
Run/Common/: CMakeLists.txt  FitData.hpp  Processor.cpp  Processor.hpp  Writer.hpp
Run/GPU/: CMakeLists.txt  DataSizeCalculator.cu  IntersectGPUTest.cu  KalmanFitterGPUSTest.cu  KalmanFitterGPUTest.cu  Kernels.cu
cmake/: ActscoreConfig.cmake.in  ActscoreConfigVersion.cmake.in
exe_cuda/: CMakeLists.txt  IntersectCudaTest.cu  KalmanFitterCudaTest.cu  intersect.cu  main.cu
exe_gcc/: CMakeLists.txt  KalmanFitterGccTest.cpp  main.cpp
include/ActsExamples/: Generator.hpp  MultiplicityGenerators.hpp  ParametricParticleGenerator.hpp  RandomNumbers.hpp  VertexGenerators.hpp
include/EventData/: ChargePolicy.hpp  ParameterSet.hpp  PixelSourceLink.hpp  SingleBoundTrackParameters.hpp  SingleCurvilinearTrackParameters.hpp  SingleTrackParameters.hpp  SourceLinkConcept.hpp  TrackParameters.hpp  TrackState.hpp
include/Fitter/: GainMatrixSmoother.hpp  GainMatrixUpdater.hpp  KalmanFitter.hpp
include/Geometry/: GeometryContext.hpp  GeometryID.hpp  GeometryObject.hpp  GeometryStatics.hpp
include/MagneticField/: BFieldMapUtils.hpp  InterpolatedBFieldMap.hpp  MagneticFieldContext.hpp  SolenoidBField.hpp
include/Material/: HomogeneousSurfaceMaterial.hpp  ISurfaceMaterial.hpp  Interactions.hpp  Material.hpp  MaterialSlab.hpp
include/Math/: Math.hpp
include/Plugins/: BFieldOptions.hpp  BFieldUtils.hpp
include/Propagator/: ConstrainedStep.hpp  DirectNavigator.hpp  EigenStepper.hpp  EigenStepper.ipp  Propagator.hpp  Propagator.ipp  StandardAborters.hpp
include/Surfaces/: BoundaryCheck.hpp  ConvexPolygonBounds.hpp  ConvexPolygonBounds.ipp  InfiniteBounds.hpp  LineSurface.hpp  PlanarBounds.hpp  PlaneSurface.hpp  RectangleBounds.hpp  Surface.hpp  SurfaceBounds.hpp
include/Surfaces/detail/: Surface.ipp  (+3 more)
include/Test/: EventGenerator.hpp  Helper.hpp  Logger.hpp  TestHelper.hpp
include/Utilities/: BinningType.hpp  CudaHelper.hpp  CudaKernelContainer.hpp  Definitions.hpp  Helpers.hpp  IAxis.hpp  Interpolation.hpp  Intersection.hpp  Logger.hpp  Math.hpp  MultiIndex.hpp  ParameterDefinitions.hpp  ParameterTypes.hpp  PdgParticle.hpp  Profiling.hpp  RandomNumbers.hpp  TypeTraits.hpp  UnitVectors.hpp  Units.hpp
performance_testing/Utilities/: Logger.hpp
performance_testing/scripts/: statistical_run.sh
scripts/: install_tag.sh
src/MagneticField/: BFieldMapUtils.cpp  SolenoidBField.cpp
src/Material/: Interactions.cpp  Material.cpp  MaterialSlab.cpp
src/Plugins/: BFieldOptions.cpp  BFieldUtils.cpp
src/Surfaces/: PlaneSurface.cpp  RectangleBounds.cpp  Surface.cpp
(+946 files in other folders)
